--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
 
   </head>
   <body>
+    <!-- heading to start of the game trigger timer also  -->
     <div class"body">
       <h1 id="TriviaGame"> Trivia Game </h1>
     </div>
 
-    <div class="timerclass">
-      <h2 id="timerid">
+    <!-- button to start the game  -->
+    <div class="start">
+      <h1 id="start"> START </h1>
     </div>
 
+    <!-- timer box for questions  -->
+    <div class="timerBox">
+      <h2 id="timer"> </h2>
+    </div>
+
+    <!-- list of questions with correct or incorrect responce back  -->
     <div class"QuestionBox">
-        
     </div>
 
     <!--Js link for game  -->
-    <script src="assets/javascript.app.js"></script>
+    <script src="assets/javascript/app.js"></script>
     </div>
   </body>
 </html>
