--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       <h2 id="timer"> </h2>
     </div>
 
-    <!-- list of questions with correct or incorrect responce back  -->
-    <div class"QuestionBox">
+    <!-- list of questions with correct or incorrect response back  -->
+    <div class="questionBox" id="questionBox">
+
     </div>
 
     <!--Js link for game  -->
