--- a/index.html
+++ b/index.html
@@ -15,28 +15,38 @@
 
   </head>
   <body>
-    <!-- heading to start of the game trigger timer also  -->
-    <div class"body">
-      <h1 id="TriviaGame"> Trivia Game </h1>
-    </div>
+    <div class="wrapper">
 
-    <!-- button to start the game  -->
-    <div class="start">
-      <h1 id="start"> START </h1>
-    </div>
+      <!-- heading to start of the game trigger timer also  -->
+      <div class="body">
+        <h1 id="triviaGame"> Trivia Game </h1>
+      </div>
 
-    <!-- timer box for questions  -->
-    <div class="timerBox">
-      <h2 id="timer"> </h2>
-    </div>
+      <!-- button to start the game  -->
+      <div class="start">
+        <h1 id="start"> START </h1>
+      </div>
 
-    <!-- list of questions with correct or incorrect response back  -->
-    <div class="questionBox" id="questionBox">
+      <!-- timer box for questions  -->
+      <div class="timerBox">
+        <h2 id="timer"> </h2>
+      </div>
 
-    </div>
+      <div class="score">
+        <h3 id='correct'></h3>
+        <h3 id='incorrect'></h3>
+        <h3 id='unanswered'></h3> 
 
-    <!--Js link for game  -->
-    <script src="assets/javascript/app.js"></script>
+      </div>
+
+      <!-- list of questions with correct or incorrect response back  -->
+      <div class="questionBox" id="questionBox">
+
+      </div>
+
+      <!--Js link for game  -->
+      <script src="assets/javascript/app.js"></script>
+      <!-- </div> -->
     </div>
   </body>
 </html>
